--- a/examples/vis_l4net.ipynb
+++ b/examples/vis_l4net.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
      "output_type": "stream",
      "text": [
       "...importing nodes:  50770\n",
-      "# unique morphologies:  0\n"
+      "# unique morphologies:  169\n"
      ]
     }
    ],
@@ -59,9 +59,14 @@
     "cell_models_file_name = \"./column_net/structure/cell_models.csv\"\n",
     "morph_dir = \"./column_net/structure/morph_segs\"\n",
     "\n",
+    "#nodes_df, cm_df = ng.load_nodes(cells_file_name, cell_models_file_name)\n",
+    "#cm_bio_df = cm_df[cm_df['level_of_detail']=='biophysical']\n",
+    "#morphologies, soma_sizes = ng.load_morphologies(morph_dir, cm_bio_df)\n",
+    "\n",
+    "\n",
     "nodes_df, cm_df = ng.load_nodes(cells_file_name, cell_models_file_name)\n",
-    "cm_bio_df = cm_df[cm_df['level_of_detail']=='biophysical']\n",
-    "morphologies, soma_sizes = ng.load_morphologies(morph_dir, cm_bio_df)\n",
+    "morphologies, soma_sizes = ng.load_morphologies(morph_dir, cm_df)\n",
+    "\n",
     "\n",
     "# added soma_sizes for intfire neurons:\n",
     "soma_sizes[100000101] = 10.0\n",
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
