--- a/examples/plot_net.ipynb
+++ b/examples/plot_net.ipynb
@@ -110,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "... initializing canvas ...\n",
-      "...setting gbcolor:  black\n"
+      "...setting gbcolor:  white\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
     "fig = plb.figure()\n",
     "\n",
     "#Set figure background\n",
-    "fig.set_bgcolor('black')    #Set figure background\n",
+    "fig.set_bgcolor('white')    #Set figure background\n",
     "\n"
    ]
   },
@@ -131,7 +131,7 @@
    },
    "outputs": [],
    "source": [
-    "# #Create layer slices\n",
+    "# # #Create layer slices\n",
     "# layer_depths = [100,310,420,650,850]  #NB: values will display as negative, i.e. from top of cortex\n",
     "# layer_colors = ['red','blue','green','cyan','magenta'] #blue\n",
     "# layer_alpha = 80\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -158,8 +158,8 @@
    "source": [
     "#Create frame on outside of column; standard size is 1mm^3 and should not be changed\n",
     "frame=[[500,0,500], [500,0,-500], [-500,0,-500], [-500,0,500], [500,1000,500], [500,1000,-500], [-500,1000,-500], [-500,1000,500]]\n",
-    "frame_colour = [(255,255,255)]\n",
-    "#frame_colour = [(0,0,0)]\n",
+    "#frame_colour = [(255,255,255)]\n",
+    "frame_colour = [(0,0,0)]\n",
     "fig.set_frame(frame, frame_colour) # xyz volume block to place in the window. To remove use: fig.set_frame([],[]) \n",
     "\n"
    ]
@@ -180,11 +180,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Htr3a': 'cadetblue',\n",
+       " 'Ntsr1': 'blueviolet',\n",
+       " 'Pvalb': 'brown',\n",
+       " 'Rbp4': 'lightseagreen',\n",
+       " 'Rorb': 'green',\n",
+       " 'Scnn1a': 'beige',\n",
+       " 'Sst': 'coral'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# put desired colors in the list below to use in a colormap:\n",
     "# may use multiple lists\n",
@@ -207,10 +224,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "... processing cell:  ready to display spherical somata!\n",
       "...drawing 3D segments...\n",
-      "... # of segs:  268\n",
-      "...length of seg:  0  =  14.9039916992\n",
-      "...length of seg:  1  =  20.2637448536\n"
+      "-693.137263038 9.84003477813 702.977297816\n",
+      "-604.500701264 -18.1260777449 586.37462352\n",
+      "-648.830113156 25.6445715576 674.474684713\n",
+      "-932.03122891 -680.563876988 251.467351922\n",
+      "-1050.44279833 -717.792076292 332.650722037\n",
+      "-758.35703806 -269.828946083 488.528091976\n",
+      "-877.255088042 -99.5112215616 777.74386648\n",
+      "-886.168201996 -4.43392642293 881.734275573\n",
+      "-769.881952859 -281.353860882 488.528091976\n",
+      "-877.925133008 3.80914256507 881.734275573\n",
+      "-801.087619338 -312.559527361 488.528091976\n",
+      "-846.4724556 -357.944363623 488.528091976\n",
+      "-727.296294337 -238.76820236 488.528091976\n"
      ]
     }
    ],
@@ -218,7 +246,7 @@
     "#plot selected cells\n",
     "\n",
     "#fig.plot_slice(mask_below_y100_slice[::10], morphologies, cmap_cre_line,'cre_line',xplane_range)    #Pass query into plotting routine along with raw morphologies\n",
-    "#fig.plot_somas(cells_below_y100_df[::10], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+    "fig.plot_somas(cells_below_y100_df[::1000], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
     "\n",
     "\n",
     "#1D morphologies\n",
@@ -226,7 +254,7 @@
     "\n",
     "\n",
     "#3D morphologies\n",
-    "fig.plot_morph3D(cells_below_y100_df[:2], morphologies, cmap_cre_line, 'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+    "fig.plot_morph3D(cells_below_y100_df[::1000], morphologies, cmap_cre_line, 'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
     "\n",
     "\n",
     "\n"
@@ -234,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
