added 3D cylinders; added joint fusion; added synapses

--- a/examples/plot_net.ipynb
+++ b/examples/plot_net.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -52,12 +52,10 @@
     "cells_file_name =\"./column_net/structure/cells.csv\"\n",
     "cell_models_file_name = \"./column_net/structure/cell_models.csv\"\n",
     "morph_dir = \"./column_net/structure/morph_segs\"\n",
+    "synapses_dir = \"./column_net/structure/synapse_locs\"\n",
     "\n",
     "nodes_df, cm_df = ng.load_nodes(cells_file_name, cell_models_file_name)\n",
-    "\n",
     "morphologies, soma_sizes = ng.load_morphologies(morph_dir, cm_df)\n",
-    "\n",
-    "\n",
     "    "
    ]
   },
@@ -67,16 +65,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of cells satisfying selection: 3109\n",
-      "number of cells satisfying selection: 12920\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Make selections:\n",
     "\n",
@@ -86,15 +75,20 @@
     "mask_below_y100_slice = \" (y_soma<-500) & (x_soma>-200) & (x_soma<200) \"\n",
     "\n",
     "#selection = \"ei=='excitatory'\"\n",
-    "#selection = \"model_id==314642645\"\n",
     "\n",
-    "cells_narrow_col_df = nodes_df.query(mask_narrow_col)\n",
-    "cells_below_y100_df = nodes_df.query(mask_below_y100_slice)\n",
+    "#cells_narrow_col_df = nodes_df.query(mask_narrow_col)\n",
+    "#print \"number of cells satisfying selection:\", len(cells_narrow_col_df.index)\n",
     "\n",
+    "#cells_below_y100_df = nodes_df.query(mask_below_y100_slice)\n",
+    "#print \"number of cells satisfying selection:\", len(cells_below_y100_df.index)\n",
     "\n",
-    "print \"number of cells satisfying selection:\", len(cells_narrow_col_df.index)\n",
-    "print \"number of cells satisfying selection:\", len(cells_below_y100_df.index)\n",
+    "#plot synapses for single cell\n",
+    "cid = 0\n",
+    "cid_query = \"id==27894\"\n",
+    "single_cell_df = nodes_df.query(cid_query)\n",
+    "#print single_cell_df\n",
     "\n",
+    "synapses = ng.load_synapses(synapses_dir, cid) #returns the seg location for each synapse\n",
     "\n"
    ]
   },
@@ -184,79 +178,61 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Htr3a': 'cadetblue',\n",
-       " 'Ntsr1': 'blueviolet',\n",
-       " 'Pvalb': 'brown',\n",
-       " 'Rbp4': 'lightseagreen',\n",
-       " 'Rorb': 'green',\n",
-       " 'Scnn1a': 'beige',\n",
-       " 'Sst': 'coral'}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# put desired colors in the list below to use in a colormap:\n",
     "# may use multiple lists\n",
     "color_list = ['lightseagreen', 'brown', 'cadetblue', 'coral', 'blueviolet', 'beige', 'green'] \n",
     "\n",
-    "cre_lines = cells_below_y100_df['cre_line'].unique() # find unique labels from a particular column\n",
+    "#Multi cell plot\n",
+    "# cre_lines = cells_below_y100_df['cre_line'].unique() # find unique labels from a particular column\n",
+    "# cmap_cre_line = cm.make_color_map(cre_lines,color_list) # make a color map for these labels\n",
+    "# cmap_ei = {'excitatory':'red','inhibitory':'blue'} # example of a manually created colormap\n",
+    "# #cmap_cre_line\n",
+    "\n",
+    "#Single cell + synapses\n",
+    "cre_lines = single_cell_df['cre_line'].unique() # find unique labels from a particular column\n",
     "cmap_cre_line = cm.make_color_map(cre_lines,color_list) # make a color map for these labels\n",
     "cmap_ei = {'excitatory':'red','inhibitory':'blue'} # example of a manually created colormap\n",
-    "cmap_cre_line"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "... processing cell:  ready to display spherical somata!\n",
       "...drawing 3D segments...\n",
-      "-693.137263038 9.84003477813 702.977297816\n",
-      "-604.500701264 -18.1260777449 586.37462352\n",
-      "-648.830113156 25.6445715576 674.474684713\n",
-      "-932.03122891 -680.563876988 251.467351922\n",
-      "-1050.44279833 -717.792076292 332.650722037\n",
-      "-758.35703806 -269.828946083 488.528091976\n",
-      "-877.255088042 -99.5112215616 777.74386648\n",
-      "-886.168201996 -4.43392642293 881.734275573\n",
-      "-769.881952859 -281.353860882 488.528091976\n",
-      "-877.925133008 3.80914256507 881.734275573\n",
-      "-801.087619338 -312.559527361 488.528091976\n",
-      "-846.4724556 -357.944363623 488.528091976\n",
-      "-727.296294337 -238.76820236 488.528091976\n"
+      "...n_segs:  120\n",
+      "ready to display synapses\n"
      ]
     }
    ],
    "source": [
-    "#plot selected cells\n",
-    "\n",
+    "#plot selected objects\n",
     "#fig.plot_slice(mask_below_y100_slice[::10], morphologies, cmap_cre_line,'cre_line',xplane_range)    #Pass query into plotting routine along with raw morphologies\n",
-    "fig.plot_somas(cells_below_y100_df[::1000], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
     "\n",
+    "#3D somas\n",
+    "#fig.plot_somas(cells_below_y100_df[::500], soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+    "#fig.plot_somas(single_cell_df, soma_sizes, cmap_cre_line,'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
     "\n",
     "#1D morphologies\n",
     "#fig.plot_morph(cells_below_y100_df[:2], morphologies, cmap_cre_line, 'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
     "\n",
-    "\n",
     "#3D morphologies\n",
-    "fig.plot_morph3D(cells_below_y100_df[::1000], morphologies, cmap_cre_line, 'cre_line')    #Pass query into plotting routine along with raw morphologies\n",
+    "n_faces = 20\n",
+    "fig.plot_morph3D(single_cell_df, morphologies, cmap_cre_line, 'cre_line', n_faces)    #Pass query into plotting routine along with raw morphologies\n",
     "\n",
-    "\n",
+    "#Single cell + synapses\n",
+    "#fig.plot_synapses(cid, synapses, morphologies, n_faces)\n",
+    "fig.plot_synapses(cid, synapses, single_cell_df, morphologies, cmap_cre_line, 'cre_line', n_faces)\n",
     "\n"
    ]
   },
@@ -281,13 +257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "fig.clear()"
+    "fig.update()"
    ]
   },
   {
@@ -295,6 +271,45 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig.plot_morph3D(cells_below_y100_df[::2000], morphologies, cmap_cre_line, 'cre_line')    #Pass query into plotting routine along with raw morphologies\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "... showing ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
