updated dynamic plotting

--- a/examples/plot_net.ipynb
+++ b/examples/plot_net.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -271,11 +271,22 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...setting gbcolor:  black\n",
+      "...reloading GL widget...\n"
+     ]
+    }
+   ],
    "source": [
-    "fig.resize_screen()"
+    "fig.set_bgcolor('black')    #Set figure background\n",
+    "fig.update()\n",
+    "\n"
    ]
   },
   {
@@ -289,7 +300,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SAVING SCREENGRAB\n"
+      "...setting gbcolor:  white\n",
+      "...reloading GL widget...\n"
+     ]
+    }
+   ],
+   "source": [
+    "fig.set_bgcolor('white')    #Set figure background\n",
+    "fig.update()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fig.resize_screen(10000, 10000)  #Make screen 10k x 10k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...saving screengrab...\n",
+      "... done...\n"
      ]
     }
    ],
@@ -299,111 +343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...setting gbcolor:  black\n"
-     ]
-    }
-   ],
    "source": [
-    "fig.set_bgcolor('black')    #Set figure background\n",
-    "\n",
-    "\n"
+    "fig.resize_screen(1000, 1000)   #Make screen 1k x 1k"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...updating ... NOT WORKING \n"
-     ]
-    }
-   ],
-   "source": [
-    "fig.update()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... showing ...\n"
-     ]
-    }
-   ],
-   "source": [
-    "fig.show()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
